aws-load-balancer-controller-alb/alb_multiple_ports.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-1
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: nginx-1
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nginx-1
    spec:
      containers:
      - image: nginx
        name: nginx-1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-1
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: nginx-1
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    
    # 指定IngressGroup。使用相同IngressGroup的Ingress会被合并到同一个ALB
    # 参考链接：https://kubernetes-sigs.github.io/aws-load-balancer-controller/v2.2/guide/ingress/annotations/#ingressgroup
    alb.ingress.kubernetes.io/group.name: group1

spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: nginx-1
              servicePort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-2
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: nginx-2
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nginx-2
    spec:
      containers:
      - image: nginx
        name: nginx-2
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-2
spec:
  ports:
    - port: 8080
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: nginx-2
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-nginx-2
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip

    # 指定 ALB Listener 的端口，默认为80
    # 参考链接：https://kubernetes-sigs.github.io/aws-load-balancer-controller/v2.2/guide/ingress/annotations/#traffic-listening
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 8080}]'
    
    # 指定IngressGroup。使用相同IngressGroup的Ingress会被合并到同一个ALB
    # 参考链接：https://kubernetes-sigs.github.io/aws-load-balancer-controller/v2.2/guide/ingress/annotations/#ingressgroup
    alb.ingress.kubernetes.io/group.name: group1
    
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: nginx-2
              servicePort: 8080
