aws-load-balancer-controller-alb/ingress_different_ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ns1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ns1
  name: deploy-ns1
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: app-ns1
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app-ns1
    spec:
      containers:
      - image: nginx
        imagePullPolicy: Always
        name: app-ns1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: ns1
  name: service-ns1
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: app-ns1

---
apiVersion: v1
kind: Namespace
metadata:
  name: ns2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ns2
  name: deploy-ns2
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: app-ns2
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app-ns2
    spec:
      containers:
      - image: nginx
        imagePullPolicy: Always
        name: app-ns2
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: ns2
  name: service-ns2
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: app-ns2

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: ns1
  name: ingress-ns1
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: group1
spec:
  rules:
    - http:
        paths:
          - path: /service1
            backend:
              serviceName: service-ns1
              servicePort: 80
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: ns2
  name: ingress-ns2
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: group1
spec:
  rules:
    - http:
        paths:
          - path: /service2
            backend:
              serviceName: service-ns2
              servicePort: 80
